Aress7/src/objects/FieldAwareServer__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Custom_Field_Code__c</fullName>
        <label>Custom Field Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintenance_Type__c</fullName>
        <label>Maintenance Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Manager_Custom_Code__c</fullName>
        <label>Project Manager Custom Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <label>Token</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>FieldAwareServer</label>
</CustomObject>